tests/ui/on-unimplemented/slice-index.stderr
error[E0277]: the type `[i32]` cannot be indexed by `i32`
  --> $DIR/slice-index.rs:8:7
   |
LL |     x[1i32];
   |       ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `i32`
help: the following other types implement trait `SliceIndex<T>`
  --> $SRC_DIR/core/src/slice/index.rs:LL:COL
   |
   = note: `usize` implements `SliceIndex<[T]>`
  --> $SRC_DIR/core/src/bstr/traits.rs:LL:COL
   |
   = note: `usize` implements `SliceIndex<ByteStr>`
   = note: required for `[i32]` to implement `Index<i32>`

error[E0277]: the type `[i32]` cannot be indexed by `RangeTo<i32>`
  --> $DIR/slice-index.rs:9:7
   |
LL |     x[..1i32];
   |       ^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[i32]>` is not implemented for `RangeTo<i32>`
help: the following other types implement trait `SliceIndex<T>`
  --> $SRC_DIR/core/src/slice/index.rs:LL:COL
   |
   = note: `RangeTo<usize>` implements `SliceIndex<[T]>`
  --> $SRC_DIR/core/src/bstr/traits.rs:LL:COL
   |
   = note: `RangeTo<usize>` implements `SliceIndex<ByteStr>`
  ::: $SRC_DIR/core/src/bstr/traits.rs:LL:COL
   |
   = note: in this macro invocation
  --> $SRC_DIR/core/src/str/traits.rs:LL:COL
   |
   = note: `RangeTo<usize>` implements `SliceIndex<str>`
   = note: required for `[i32]` to implement `Index<RangeTo<i32>>`
   = note: this error originates in the macro `impl_slice_index` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
